<?xml version="1.0" encoding="utf-8"?>

<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:horizontalGap="0.4%p"
    android:verticalGap="0px"
    android:keyWidth="8.6%p"
    android:keyHeight="7%p" >

    <Row>
        <Key android:codes="49" android:keyLabel="@string/letters_for_1" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_1"/>                          
        <Key android:codes="50" android:keyLabel="@string/letters_for_2" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_2"/>                          
        <Key android:codes="51" android:keyLabel="@string/letters_for_3" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_3"/>                          
        <Key android:codes="52" android:keyLabel="@string/letters_for_4" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_4"/>                          
        <Key android:codes="53" android:keyLabel="@string/letters_for_5" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_5"/>                          
        <Key android:codes="54" android:keyLabel="@string/letters_for_6" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_6"/>                          
        <Key android:codes="55" android:keyLabel="@string/letters_for_7" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_7"/>                          
        <Key android:codes="56" android:keyLabel="@string/letters_for_8" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_8"/>                          
        <Key android:codes="57" android:keyLabel="@string/letters_for_9" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_9"/>                          
        <Key android:codes="48" android:keyLabel="@string/letters_for_0" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_0"/>                          
        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:isRepeatable="true" />
    </Row>
    <Row>
        <Key android:codes="113" android:keyLabel="@string/juin_for_q" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_q"/>                            
        <Key android:codes="119" android:keyLabel="@string/juin_for_w" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_w"/>                            
        <Key android:codes="101" android:keyLabel="@string/juin_for_e" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_e"/>                            
        <Key android:codes="114" android:keyLabel="@string/juin_for_r" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_r"/>
        <Key android:codes="116" android:keyLabel="@string/juin_for_t" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_t"/>
        <Key android:codes="121" android:keyLabel="@string/juin_for_y" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_y"/>
        <Key android:codes="117" android:keyLabel="@string/juin_for_u" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_u"/>
        <Key android:codes="105" android:keyLabel="@string/juin_for_i" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_i"/>
        <Key android:codes="111" android:keyLabel="@string/juin_for_o" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_o"/>
        <Key android:codes="112" android:keyLabel="@string/juin_for_p" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_p"/>
        <Key android:codes="92" android:keyLabel="@string/letters_for_back_slash" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternates_for_back_slash"/>
    </Row>
    <Row>
        <Key android:codes="97" android:keyLabel="@string/juin_for_a" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_a"/>                             
        <Key android:codes="115" android:keyLabel="@string/juin_for_s" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_s"/>                            
        <Key android:codes="100" android:keyLabel="@string/juin_for_d" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_d"/>                            
        <Key android:codes="102" android:keyLabel="@string/juin_for_f" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_f"/>                            
        <Key android:codes="103" android:keyLabel="@string/juin_for_g" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_g"/>                            
        <Key android:codes="104" android:keyLabel="@string/juin_for_h" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_h"/>                            
        <Key android:codes="106" android:keyLabel="@string/juin_for_j" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_j"/>                            
        <Key android:codes="107" android:keyLabel="@string/juin_for_k" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_k"/>                            
        <Key android:codes="108" android:keyLabel="@string/juin_for_l" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_l"/>                            
        <Key android:codes="59" android:keyLabel="@string/letters_for_semi_colon" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternates_for_semi_colon"/>
        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_juin" android:isModifier="true" />
    </Row>
    <Row>
        <Key android:codes="9" android:keyIcon="@drawable/sym_keyboard_tab"/>
        <Key android:codes="122" android:keyLabel="@string/juin_for_z" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_z"/>                            
        <Key android:codes="120" android:keyLabel="@string/juin_for_x" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_x"/>                            
        <Key android:codes="99" android:keyLabel="@string/juin_for_c" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_c"/>                             
        <Key android:codes="118" android:keyLabel="@string/juin_for_v" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_v"/>                            
        <Key android:codes="98" android:keyLabel="@string/juin_for_b" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_b"/>                             
        <Key android:codes="110" android:keyLabel="@string/juin_for_n" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_n"/>                            
        <Key android:codes="109" android:keyLabel="@string/juin_for_m" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_m"/>                            
        <Key android:codes="69" android:keyLabel="@string/letters_for_minus" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_minus"/>                  
        <Key android:codes="81" android:keyLabel="@string/letters_for_equal" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_equal"/>
        <Key android:codes="39" android:keyLabel="@string/letters_for_quote" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternates_for_quote"/>
    </Row>
    <Row>
        <Key android:codes="96" android:keyLabel="@string/letters_for_tilde" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_e"/>
        <Key android:codes="91" android:keyLabel="@string/letters_for_left_square" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternates_for_left_square"/>
        <Key android:codes="93" android:keyLabel="@string/letters_for_right_square" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternates_for_right_square"/>
        <Key android:codes="-100" android:keyWidth="13.6%p" android:keyLabel="@string/letters_for_direction" android:keyIcon="@drawable/sym_keyboard_dir"/>
        <Key android:codes="32" android:keyWidth="17.6%p" android:keyIcon="@drawable/sym_keyboard_space" android:isModifier="true" android:isRepeatable="true"/>
        <Key android:codes="44" android:keyLabel="@string/letters_for_comma" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_e"/>
        <Key android:codes="46" android:keyLabel="@string/letters_for_dot" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_e"/>
        <Key android:codes="47" android:keyLabel="@string/letters_for_slash" android:popupKeyboard="@xml/kbd_popup" android:popupCharacters="@string/alternate2_for_e"/>
        <Key android:codes="10" android:keyWidth="12.6%p"
            android:keyIcon="@drawable/sym_keyboard_return"  android:isRepeatable="true"/>
    </Row>
</Keyboard>

