<?xml version="1.0" encoding="utf-8"?>
<!--
/* 
**
** Copyright 2008, The Android Open Source Project
** Copyright (C) 2009 Alejandro Grijalba
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:horizontalGap="0px"
    android:verticalGap="0px"
    android:keyWidth="9.5%p"
    android:keyHeight="8.5%p"
    >
    <Row android:rowEdgeFlags="top">
        <Key android:codes="49" android:keyLabel="@string/two_for_1" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_1"
             android:horizontalGap="5%p" android:keyEdgeFlags="left"/>
        <Key android:codes="50" android:keyLabel="@string/two_for_2" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_2" />
        <Key android:codes="51" android:keyLabel="@string/two_for_3" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_3" />
        <Key android:codes="52" android:keyLabel="@string/two_for_4" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_4" />
        <Key android:codes="53" android:keyLabel="@string/two_for_5" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_5" />
        <Key android:codes="54" android:keyLabel="@string/two_for_6" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_6" />
        <Key android:codes="55" android:keyLabel="@string/two_for_7" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_7" />
        <Key android:codes="56" android:keyLabel="@string/two_for_8" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_8" />
        <Key android:codes="57" android:keyLabel="@string/two_for_9" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_9" />
        <Key android:codes="48" android:keyLabel="@string/two_for_0" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_0" />
    </Row>

    <Row android:rowEdgeFlags="bottom" android:verticalGap="5%p">
        <Key android:codes="9" android:keyIcon="@drawable/sym_keyboard_tab" android:horizontalGap="5%p"/>
        <Key android:codes="-100" android:keyLabel="@string/letters_for_direction" android:keyIcon="@drawable/sym_keyboard_dir" />
        <Key android:codes="59" android:keyLabel="@string/two_for_semicolon" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_semicolon" />
        <Key android:codes="44" android:keyLabel="@string/two_for_comma" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_comma" />
        <Key android:codes="46" android:keyLabel="@string/two_for_dot" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_dot" />
        <Key android:codes="70" android:keyLabel="@string/two_for_equal" android:popupKeyboard="@xml/kbd_popup2" android:popupCharacters="@string/atwo_for_equal" />
        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space" android:isRepeatable="true"/>
        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:isRepeatable="true" />
        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_super" android:isModifier="true"/>
        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" android:isRepeatable="true"/>
    </Row>
</Keyboard>
